Fix overflow scrollbars on main content

--- a/app/styles/layout.sass
+++ b/app/styles/layout.sass
@@ -1,5 +1,5 @@
 .main-content
-  overflow: scroll
+  overflow: auto
 
 .text-content
   margin: $gutter * 2 auto
